--- a/P01-Middleware/P01-Middleware.csproj
+++ b/P01-Middleware/P01-Middleware.csproj
@@ -7,4 +7,8 @@
         <RootNamespace>P01_Middleware</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="CustomMiddleware\" />
+    </ItemGroup>
+
 </Project>
