--- a/P05-Views/P05-Views.csproj
+++ b/P05-Views/P05-Views.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Views\Product\" />
       <Folder Include="wwwroot\" />
     </ItemGroup>
 
