--- a/P08-DI/P08-DI.csproj
+++ b/P08-DI/P08-DI.csproj
@@ -12,4 +12,9 @@
       <ProjectReference Include="..\P08-Services\P08-Services.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.3.0" />
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
+    </ItemGroup>
+
 </Project>
