--- a/P09-Environment/Properties/launchSettings.json
+++ b/P09-Environment/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5066",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Beta"
       }
     },
     "https": {
