--- a/P10-Configuration/appsettings.json
+++ b/P10-Configuration/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "MyKey": "MyValue from appSettings.json"
+  "MyKey": "MyValue from appSettings.json",
+  "WeatherApi": {
+    "ClientID": "12345",
+    "ClientSecret": "ClientSecret~ from appSettings.json"
+  }
 }
