--- a/P10-Configuration/appsettings.json
+++ b/P10-Configuration/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "MyKey": "MyValue from appSettings.json",
   "WeatherApi": {
-    "ClientID": "12345",
-    "ClientSecret": "ClientSecret~ from appSettings.json"
+    "ClientID": "123",
+    "ClientSecret": "ClientSecretttt from appSettings.json"
   }
 }
