The 2nd way to map conf to an object: using Bind() method

--- a/P10-Configuration/appsettings.json
+++ b/P10-Configuration/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "MyKey": "MyValue from appSettings.json",
   "WeatherApi": {
-    "ClientID": "123",
-    "ClientSecret": "ClientSecretttt from appSettings.json"
+    "ClientID": "1233",
+    "ClientSecret": "ClientSecretttta from appSettings.json"
   }
 }
