--- a/P10-Configuration/appsettings.Development.json
+++ b/P10-Configuration/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "WeatherApi": {
+    "ClientID": "clientId from dev",
+    "ClientSecret": "ClientSecret from dev"
   }
 }
