--- a/P11-HttpClient/P11-HttpClient.csproj
+++ b/P11-HttpClient/P11-HttpClient.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>P11_HttpClient</RootNamespace>
-    </PropertyGroup>
+      <UserSecretsId>0a97daa9-72cd-4449-b041-23fe2f9b863b</UserSecretsId>
+  </PropertyGroup>
 
 </Project>
